api-gateway/kong.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kong
  namespace: gateway
  labels:
    app: kong
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kong
  template:
    metadata:
      labels:
        app: kong
    spec:
      volumes:
        - name: kong-config-volume
          configMap:
            name: kong-config
      containers:
        - name: kong
          image: kong/kong-gateway:3.4
          volumeMounts:
            - name: kong-config-volume
              mountPath: /opt/kong/kong.yaml
              subPath: kong.yaml
          ports:
            - containerPort: 8000
