api-gateway/kong.service.clusterip.yaml
apiVersion: v1
kind: Service
metadata:
  name: kong-internal
  namespace: gateway
  labels:
    app: kong
spec:
  type: ClusterIP
  selector:
    app: kong
  ports:
    - name: proxy
      port: 8000
      targetPort: 8000
    - name: admin
      port: 8001
      targetPort: 8001
