api-gateway/kong.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kong
  namespace: gateway
  labels:
    app: kong
spec:
  type: NodePort
  selector:
    app: kong
  ports:
    - name: proxy
      port: 80
      targetPort: 8000
      nodePort: 30080
    - name: admin
      port: 8001
      targetPort: 8001
      nodePort: 30081
