api-gateway/nginx.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-gateway
  namespace: gateway
spec:
  type: NodePort
  selector:
    app: nginx-gateway
  ports:
    - name: proxy
      port: 80
      targetPort: 80
      nodePort: 30080
