api-gateway/openresty.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: openresty-gateway
  namespace: gateway
spec:
  type: NodePort
  selector:
    app: openresty-gateway
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
      nodePort: 30080
