api-gateway/traefik.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: traefik
  namespace: gateway
spec:
  replicas: 1
  selector:
    matchLabels:
      app: traefik
  template:
    metadata:
      labels:
        app: traefik
    spec:
      containers:
        - name: traefik
          image: traefik:v3.0
          args:
            - "--api.insecure=true"
            - "--entrypoints.web.address=:80"
            - "--providers.kubernetescrd"
            - "--experimental.plugins.jwt.moduleName=github.com/traefik/plugindemo/jwt"
            - "--experimental.plugins.jwt.version=v1.0.0"
          ports:
            - name: web
              containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: traefik
  namespace: gateway
spec:
  type: LoadBalancer
  selector:
    app: traefik
  ports:
    - name: web
      port: 80
      targetPort: 80
